--- a/server/app/package.json
+++ b/server/app/package.json
@@ -1,7 +1,6 @@
 {
   "name": "note",
   "version": "1.0.0",
-  "description": "",
   "main": "dist/index.js",
   "scripts": {
     "prebuild": "tslint -c tslint.json -p tsconfig.json --fix",
@@ -12,12 +11,15 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "mongodb": "^3.5.9"
   },
   "devDependencies": {
     "@types/express": "^4.17.6",
+    "@types/mongodb": "^3.5.22",
     "@types/node": "^14.0.13",
     "tslint": "^6.1.2",
     "typescript": "^3.9.5"
-  }
+  },
+  "description": ""
 }
