--- a/server/app/package.json
+++ b/server/app/package.json
@@ -11,10 +11,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "crypto-js": "^4.0.0",
     "express": "^4.17.1",
     "mongodb": "^3.5.9"
   },
   "devDependencies": {
+    "@types/crypto-js": "^3.1.47",
     "@types/express": "^4.17.6",
     "@types/mongodb": "^3.5.22",
     "@types/node": "^14.0.13",
