Add jwt login, auth middleware

--- a/server/app/package.json
+++ b/server/app/package.json
@@ -13,11 +13,13 @@
   "dependencies": {
     "crypto-js": "^4.0.0",
     "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
     "mongodb": "^3.5.9"
   },
   "devDependencies": {
     "@types/crypto-js": "^3.1.47",
     "@types/express": "^4.17.6",
+    "@types/jsonwebtoken": "^8.5.0",
     "@types/mongodb": "^3.5.22",
     "@types/node": "^14.0.13",
     "tslint": "^6.1.2",
