--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -30,6 +30,9 @@ services:
       PORT: 7001
       MONGO_ADDR: "note-db:27017"
       ACCOUNTS_PATH: "/app/config/accounts.json"
+      AUTH_EXPIRES: 3600
+    env_file:
+      - ./config/jwt-secret
     depends_on:
       - note-db
     links:
