--- a/proxy/Caddyfile
+++ b/proxy/Caddyfile
@@ -2,6 +2,9 @@ localhost:7000 {
   proxy /api note-server:7001 {
     transparent
   }
+  proxy /sockjs-node note-client:7002 {
+    websocket
+  }
   proxy / note-client:7002 {
     transparent
   }
