--- a/client/app/package.json
+++ b/client/app/package.json
@@ -10,6 +10,7 @@
     "@types/node": "^12.12.47",
     "@types/react": "^16.9.36",
     "@types/react-dom": "^16.9.8",
+    "history": "^5.0.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.2.0",
@@ -38,6 +39,7 @@
     ]
   },
   "devDependencies": {
+    "@types/history": "^4.7.6",
     "@types/react-router-dom": "^5.1.5",
     "tslint": "^6.1.2"
   }
